--- a/styles.css
+++ b/styles.css
@@ -356,3 +356,141 @@ a.cover-link {
     }
 }
 
+.about-me_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 100vh;
+    padding: 100px;
+    text-align: center;
+}
+
+.type4 p {
+    font-size: 40px;
+    display: inline-block;
+    letter-spacing: 0.1em;
+
+    padding-top: 100px;
+    width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+
+    animation:
+        type4 3s steps(28) 2s forwards;
+      
+    animation-play-state: paused;
+    
+}
+
+.type4 p.typing {
+    animation-play-state: running;
+}
+
+@keyframes type4 {
+    to { width: 35ch }
+}
+
+
+@media screen and (max-width: 938px) {
+    .type4 p {
+        font-size: 1.5em;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .type4 p {
+        font-size: 1.25em;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .type4 p {
+        font-size: 0.75em;
+    }
+}
+
+.profile-card {
+    margin: 50px;
+    max-width: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.type5 p {
+    font-size: 40px;
+    display: inline-block;
+    letter-spacing: 0.1em;
+
+    padding-top: 00px;
+    width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+
+    animation:
+        type5 3s steps(28) 2s forwards;
+      
+    animation-play-state: paused;
+    
+}
+
+.type5 p.typing {
+    animation-play-state: running;
+    animation-delay: 5s;
+}
+
+@keyframes type5 {
+    to { width: 35ch }
+}
+
+
+@media screen and (max-width: 938px) {
+    .type5 p {
+        font-size: 1.5em;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .type5 p {
+        font-size: 1.25em;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .type5 p {
+        font-size: 0.75em;
+    }
+}
+
+.social__icons--link {
+    color: #000;
+    font-size: 100px;
+    margin: 0 20px 20px 20px;
+}
+
+.social__media {
+    width: 100%;
+}
+
+.social__media--wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px auto 0 auto;
+}
+
+.social__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+}
+
+@media screen and (max-width: 820px) {
+    .social__media--wrap {
+        flex-direction: column;
+    }
+}
