Major: Added X2Z wordpress theme project to projects

--- a/styles.css
+++ b/styles.css
@@ -304,8 +304,8 @@ a.cover-link {
 }
 
 .big-card:nth-child(3) {
-    
-    transform:translateX(-6%) rotate(-3deg)
+    transform:translateX(-6%) rotate(-3deg);
+    background-image: url("images/x2z.png")
 }
 
 .big-card:nth-child(4) {
